Fixed issue with images not showing

--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ transition: .5s ease;
     padding: 10px;
 }
 
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   
     
     #name #web{
@@ -383,7 +383,7 @@ transition: .5s ease;
     }
 
 
-@media screen and (max-width: 768px) and (min-width: 600px) {
+@media only screen and (max-width: 768px) and (min-width: 600px) {
   
 
     
